Fixed the single post view to be in the form controller/action/id

--- a/src/Blogger/Views/Home/Profile.cshtml
+++ b/src/Blogger/Views/Home/Profile.cshtml
@@ -13,14 +13,15 @@
             <ol>
                 @foreach (Post post in Model.AllPosts.Reverse())
                 {
-                  
-
-                    @Html.ActionLink(post.Title, "SinglePost", "Post",
-                      new { Title = post.Title, Text = post.Text, TimeStamp = post.TimeStamp,
-                            PostId = post.PostId, PosterEmail = post.PosterEmail, PosterId = post.PosterId}) <br />
 
 
-                   
+                    <li>
+                        @Html.ActionLink(post.Title, "SinglePost", "Post",
+                      new { id = post.PostId })
+                    </li>
+
+
+
                 }
                 
 
