--- a/src/Blogger/Views/Post/Index.cshtml
+++ b/src/Blogger/Views/Post/Index.cshtml
@@ -9,9 +9,17 @@
 <h3>@ViewBag.Message</h3>
 @foreach (var post in Model.AllPosts.Reverse())
 {
-    <center><h3><strong>@post.Title</strong></h3><br>
-    <p> Post Id @post.PostId</p> <p>Poster Id @post.PosterId</p>
-            <h4>@post.Text</h4><br>
-                  Posted by @post.PosterEmail
-     at @post.TimeStamp</center>
+    <center>
+        <h3>
+         <strong>@Html.ActionLink(post.Title, "SinglePost", "Post",
+                      new { id = post.PostId })
+            </strong>
+        </h3><br>
+        <p> Post Id @post.PostId</p> <p>Poster Id @post.PosterId</p>
+            
+        <h4>@post.Text</h4><br>
+      
+         Posted by @post.PosterEmail  at @post.TimeStamp
+    
+    </center>
         }
