Added the ability to delete posts

--- a/src/Blogger/Views/Home/Profile.cshtml
+++ b/src/Blogger/Views/Home/Profile.cshtml
@@ -17,8 +17,9 @@
 
                     <li>
                         @Html.ActionLink(post.Title, "SinglePost", "Post",
+                      new { id = post.PostId })   @Html.ActionLink("Delete", "DeletePost", "Post",
                       new { id = post.PostId })
-                    </li>
+                    </li>  
 
 
 
