Added edit functionality

--- a/src/Blogger/Views/Home/NewPost.cshtml
+++ b/src/Blogger/Views/Home/NewPost.cshtml
@@ -13,7 +13,7 @@
         <div>
             <p>Write your new post here</p>
             <input name="Title" type="text"  value=" Title" /><br /><br />
-            <textarea name="Text" id="Post" rows="4" cols="50"></textarea>
+            <textarea class =" form-control"name="Text" id="Post" rows="4" cols="50"></textarea>
         </div>
         <center>
             <div>
