--- a/src/Blogger/Views/Home/Profile.cshtml
+++ b/src/Blogger/Views/Home/Profile.cshtml
@@ -3,13 +3,15 @@
     ViewBag.Title = "Profile";
 }
 
-<div style="float: left; width:200px"><h2>@ViewBag.Title</h2> </div>
-    <div style="float: right; width:200px; margin-top: 35px">
+
+<div class="pull-left"><h2>@ViewBag.Title</h2> </div>
+<br />
+    <div class="pull-right ">
         <form asp-controller="Home" asp-action="NewPost"><button type="submit">Write New Post</button></form>
-    </div>
+  </div>
     <br /><br/><br/>
     <div>
-        <center>
+        
             <ol>
                 @foreach (Post post in Model.AllPosts.Reverse())
                 {
@@ -17,18 +19,23 @@
 
                     <li>
                         @Html.ActionLink(post.Title, "SinglePost", "Post",
-                      new { id = post.PostId })   @Html.ActionLink("Delete", "DeletePost", "Post",
-                      new { id = post.PostId })
-                    </li>  
+                      new { id = post.PostId }) 
+
+                   
+
+                       
+
+                    </li>
 
 
+                   
 
                 }
                 
 
             </ol>
 
-        </center>
+        </>
     </div>
 
 
