--- a/src/Blogger/Views/Post/EditPost.cshtml
+++ b/src/Blogger/Views/Post/EditPost.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Blogger.Models.Post
 @{
-    ViewBag.Title = "Write New Post";
+    ViewBag.Title = "Edit";
 }
 <h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
