Edits and deletes now both working properly

--- a/src/Blogger/Views/Home/NewPost.cshtml
+++ b/src/Blogger/Views/Home/NewPost.cshtml
@@ -12,8 +12,10 @@
     <center>
         <div>
             <p>Write your new post here</p>
-            <input name="Title" type="text"  value=" Title" /><br /><br />
-            <textarea class =" form-control"name="Text" id="Post" rows="4" cols="50"></textarea>
+            <div class="form-group">
+                <input type="text" name="Title" class="form-control" placeholder="Title" id="usr">
+            </div>
+            <textarea class =" form-control"name="Text" id="Post" rows="25" cols="100"></textarea>
         </div>
         <center>
             <div>
