--- a/src/Blogger/Views/Post/EditPost.cshtml
+++ b/src/Blogger/Views/Post/EditPost.cshtml
@@ -6,15 +6,17 @@
 <h3>@ViewBag.Message</h3>
 
 
-<h3>@User.Identity.Name</h3>
 
 <form asp-controller="Post" asp-action="UpdatePost">
     <center>
         <div>
-            <p>Edit your post</p>
+            <strong><p>Edit your post</p></strong>
+            <div class="form-group">
+                <input type="text"  name="Title"  class="form-control" value="@Model.Title" id="usr">
+            </div>
             <input name="id" type="text" value="@Model.PostId" hidden />
-            <input name="Title" type="text" value="@Model.Title" /><br /><br />
-            <textarea class=" form-control" name="Text" id="Post" rows="4" cols="50">@Model.Text</textarea>
+           <!--<input type="text" value="@Model.Title" /><br /><br /> --> 
+            <textarea class=" form-control" name="Text" id="Post" rows="15" cols="100">@Model.Text</textarea>
         </div>
         <center>
             <div>
