--- a/src/Blogger/Views/Post/EditPost.cshtml
+++ b/src/Blogger/Views/Post/EditPost.cshtml
@@ -20,7 +20,7 @@
         </div>
         <center>
             <div>
-                <button type="submit">Save</button>
+                <button type="submit" class="btn btn-block post-button">Save</button>
             </div>
         </center>
     </center>
