--- a/src/Blogger/Views/Post/SinglePost.cshtml
+++ b/src/Blogger/Views/Post/SinglePost.cshtml
@@ -8,14 +8,14 @@
 
     @if (User.Identity.IsAuthenticated && User.Identity.Name == Model.PosterEmail)
     {
-        @Html.ActionLink("", "GetEditPostView", "Post", new { id = Model.PostId }, new { @class = "btn btn-default glyphicon glyphicon-wrench pull-right" })
+        @Html.ActionLink("", "GetEditPostView", "Post", new { id = Model.PostId }, new { @class = "btn btn-primary primaryglyphicon glyphicon-wrench pull-right" })
     }
 
 </div>
  <br />
         <center>
             <h3><strong>@Model.Title</strong></h3><br>
-            <p> Post Id @Model.PostId</p> <p>Poster Id @Model.PosterId</p>
+           
        </center>
         
         <h4>@Model.Text</h4><br>
