--- a/src/Blogger/Views/Home/NewPost.cshtml
+++ b/src/Blogger/Views/Home/NewPost.cshtml
@@ -19,7 +19,7 @@
         </div>
         <center>
             <div>
-               <button type="submit">Post</button>
+               <button type="submit"  class="btn btn-success btn-lg post-button">Post</button>
             </div>
         </center>
     </center>
