--- a/src/Blogger/Views/Shared/Error.cshtml
+++ b/src/Blogger/Views/Shared/Error.cshtml
@@ -1,6 +1,8 @@
-﻿@{
+﻿@model String
+@{
     ViewBag.Title = "Error";
 }
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
+<h2 class="text-danger"> @Model</h2>
