--- a/src/Blogger/wwwroot/css/site.css
+++ b/src/Blogger/wwwroot/css/site.css
@@ -20,6 +20,9 @@ select{
 .carousel-caption {
     z-index: 10 !important;
 }
+.post-button {
+    margin-top: 10px
+}
 
     .carousel-caption p {
         font-size: 20px;
