--- a/src/Blogger/Views/Home/NewPost.cshtml
+++ b/src/Blogger/Views/Home/NewPost.cshtml
@@ -9,7 +9,7 @@
 <h3>@User.Identity.Name</h3>
 
 <form asp-controller="Post" asp-action="Index">
-    <center>
+    
         <div>
             <p>Write your new post here</p>
             <div class="form-group">
@@ -17,10 +17,9 @@
             </div>
             <textarea class =" form-control"name="Text" id="Post" rows="25" cols="100"></textarea>
         </div>
-        <center>
+        
             <div>
-               <button type="submit"  class="btn btn-success btn-lg post-button">Post</button>
+               <button type="submit"  class="btn btn-success btn-lg post-button pull-right">Post</button><br /><br />
             </div>
-        </center>
-    </center>
+
 </form>
