--- a/src/Blogger/Views/Home/Profile.cshtml
+++ b/src/Blogger/Views/Home/Profile.cshtml
@@ -7,12 +7,12 @@
 <div class="pull-left"><h2>@ViewBag.Title</h2> </div>
 <br />
     <div class="pull-right ">
-        <form asp-controller="Home" asp-action="NewPost"><button type="submit" class="btn btn-group-lg btn-primary" ><span class="glyphicon glyphicon-pencil"></span> </button></form>
+        <form asp-controller="Home" asp-action="NewPost"><button type="submit" class="btn btn-group-lg btn-lg btn-primary" ><span class="glyphicon glyphicon-plus"></span> </button></form>
   </div>
     <br /><br/><br/>
     <div>
             <ol>
-                @foreach (Post post in Model.AllPosts.Reverse())
+                @foreach (Blogger.Models.Post post in Model.AllPosts.Reverse())
                 {
 
 
