--- a/src/Blogger/Views/Post/NewPost.cshtml
+++ b/src/Blogger/Views/Post/NewPost.cshtml
@@ -11,7 +11,7 @@
 <form asp-controller="Post" asp-action="Index">
     
         <div>
-            <p>Write your new post here</p>
+            <p>Write a new post!</p>
             <div class="form-group">
                 <input type="text" name="Title" class="form-control" placeholder="Title" id="usr">
             </div>
