git ignore and removed center tag

--- a/src/Blogger/Views/Post/SinglePost.cshtml
+++ b/src/Blogger/Views/Post/SinglePost.cshtml
@@ -12,13 +12,12 @@
     }
 
 </div>
- <br />
-        <center>
-            <h3><strong>@Model.Title</strong></h3><br>
-           
-       </center>
-        
+<br>      
+      <h3><strong>@Model.Title</strong></h3>
+<br>
+
         <h4>@Model.Text</h4><br>
+
         Posted by @Model.PosterEmail at @Model.TimeStamp
    
 
