Added slugs and a new url format for single posts

--- a/src/Blogger/Views/Home/Index.cshtml
+++ b/src/Blogger/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         <h3>
             <strong>
                 @Html.ActionLink(post.Title, "SinglePost", "Post",
-                      new { id = post.PostId })
+                      new { slug = post.Slug })
         </strong>
     </h3><br>
    
