--- a/src/Blogger/Views/Home/Profile.cshtml
+++ b/src/Blogger/Views/Home/Profile.cshtml
@@ -7,17 +7,19 @@
 <div class="pull-left"><h2>@ViewBag.Title</h2> </div>
 <br />
     <div class="pull-right ">
+        @Html.ActionLink("Write new post","NewPost", "Post")
         <form asp-controller="Post" asp-action="NewPost"><button type="submit" class="btn btn-group-lg btn-lg btn-primary" ><span class="glyphicon glyphicon-plus"></span> </button></form>
   </div>
     <br /><br/><br/>
     <div>
             <ol>
-                @foreach (Blogger.Models.Post post in Model.AllPosts.Reverse())
+                @foreach (Blogger.Models.Post post in Model.AllPosts)
                 {
 
 
                     <li>
-                        @Html.ActionLink(post.Title, "SinglePost", "Post", new { id = post.PostId }) 
+                        <p> @post.Slug</p>
+                        @Html.ActionLink(post.Title, "SinglePost", "Post", new { slug = post.Slug }) 
                       
 
 
