Added redirects to some routes to follow PRG, and also added a new post button to the nav bar so users can go tp the create post page from the home page

--- a/src/Blogger/Views/Shared/_LoginPartial.cshtml
+++ b/src/Blogger/Views/Shared/_LoginPartial.cshtml
@@ -8,6 +8,9 @@
                 <a asp-controller="Home" asp-action="Profile" title="Profile">Hello @User.GetUserName()!</a>
             </li>
             <li>
+                <a asp-controller="Post" asp-action="NewPost" title="Profile">New Post</a>
+            </li>
+            <li>
                 <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
             </li>
         </ul>
