--- a/src/Blogger/Views/Home/Profile.cshtml
+++ b/src/Blogger/Views/Home/Profile.cshtml
@@ -18,17 +18,13 @@
 
 
                     <li>
-                        <p> @post.Slug</p>
-                        @Html.ActionLink(post.Title, "SinglePost", "Post", new { slug = post.Slug } ) 
-                      
-
-
+                        
+                        <strong> @Html.ActionLink(post.Title, "SinglePost", "Post", new { slug = post.Slug }) </strong> <br>
                         <form asp-controller="Post" asp-action="DeletePost">
                             <button type="submit" class="btn btn-default btn-danger glyphicon glyphicon-trash"> </button>
                             <input name="id" value="@post.PostId" hidden />
                         </form>
-                     
-       
+                        <br>
                     </li>
                 }
   
